--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-npm-comp-lib",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -35,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "glob": "^10.3.10",
     "postcss": "^8.4.31",
+    "rollup-plugin-css-only": "^4.3.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
